feat: implement authentication enhancements, database performance tuning, and standardized agent configuration files.